Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

* Version 0.0.42 (unreleased)

** API and ABI modifications:
No changes since last version.

* Version 0.0.41 (released 2010-01-19)

** Add configuration keyword 'quick-random' to speed up libgcrypt.

** Fix libgcrypt detection (problem with libgpg-error dependency).

** Update many gnulib files.

** minitasn1: Internal copy upgraded to GNU Libtasn1 v2.4.

** API and ABI modifications:
No changes since last version.

* Version 0.0.40 (released 2009-04-03)

** shisa: Fix bug that made command line parameter parsing unreliable.

** Shishi can now be cross-compiled to Windows using MinGW.
See <http://josefsson.org/gnutls4win/> for build scripts and pre-built
binary packages.

** API and ABI modifications:
No changes since last version.

* Version 0.0.39 (released 2009-03-30)

** libshishi: The linker version script lists APIs explicitly.
This will reduce the chance that a symbol is exported accidentally.

** libshisa: Use a LD version script on platforms where it is supported.
Currently only GNU LD and the Solaris linker supports it.  This helps
Debian package tools to produce better dependencies.  Before we used
Libtool -export-symbols-regex that created an anonymous version tag.
We still fall back on -export-symbols-regex if the system does not
support LD version scripts, although on most platforms this will just
affect symbol visibility.

** API and ABI modifications:
No changes since last version.

* Version 0.0.38 (released 2009-02-26)

** libshisa: Use libtool -export-symbols-regex to fix exported namespace.

** doc: Change license on the manual to GFDLv1.3+.

** minitasn1: Internal copy updated to libtasn1 v1.8.

** More compiler warnings enabled, and many warnings fixed.

** API and ABI modifications:
No changes since last version.
